--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,10 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 #profile .row > div { margin-bottom: 20px; }
 #profile .row > div img { width: 100%; max-width: 246px; height: auto; }
 	
-#experiences .experience { margin-bottom: 20px; }
+#experiences .experience { margin-bottom: 20px; opacity: 0 }
+// CSS hide
+#experiences .experiences {  opacity: 0 }
+#experiences .experience { margin-bottom: 20px; opacity: 0 }
 #experiences .experience p > strong { display: block; padding-top: 8px; margin-bottom: 10px; }
 #experiences .experience .experience-details { display: block; margin-top: 6px; }
 #experiences .experience .experience-details * { color: rgba(217,53,55,1); }
